# src/controllers/auth.controller.ts
@@ -126,9 +126,9 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
-     #swagger-security = [{
-     "bearerAuth": []
-     }]
+     * #swagger.security = [{
+     *   "bearerAuth": []
+     * }]
      */
     try {
       const user = req.user;
